--- a/style.css
+++ b/style.css
@@ -1,8 +1,66 @@
-h1{
-    text-align: center;
+body{
+    background-color: cadetblue;
+    font-family: "Montserrat", sans-serif;
+    
 }
 
-footer{
-    font-size: 14px;
+h1 {
     text-align: center;
+    font-size: 38px;
+}
+
+h2 {
+    margin: 0 0 5px;
+    font-size: 25px;
+}
+
+select {
+    display: block;
+    width: 90%;
+    font-size: 13px;
+    border-radius: 4px;
+    padding: 10px;
+}
+
+.container{
+    max-width: 700px;
+    margin: 60px auto;
+    background: rgba(245, 245, 245, 0.471);
+    padding: 30px;
+    box-shadow: 03px 03px 03px rgba(0, 0, 0, 0.2);
+    border-radius: 7px;
+}
+
+.city{
+    display: flex;
+    margin: 25px 0;
+    justify-content: space-between;
+    padding: 20px 0;
+    border-bottom: 0.9px dashed rgb(151, 151, 151);
+}
+
+.city:last-child{
+    border: none;
+}
+
+.time{
+    font-size: 36px;
+    font-weight: bold;
+}
+
+.time small{
+    font-size:16px;
+    vertical-align:middle;
+}
+
+.date{
+    opacity: 0.7;
+}
+
+
+footer{
+    text-align: center;
+    font-size: 14px;
+    color: rgba(0, 0, 0, 0.8);
+    
 }
