--- a/style.css
+++ b/style.css
@@ -1,22 +1,25 @@
 body{
     background-color: cadetblue;
-    font-family: "Montserrat", sans-serif;
-    
+    font-family: "Noto Sans JP", sans-serif;
+    font-optical-sizing: auto; 
+    font-style: normal;
 }
 
 h1 {
     text-align: center;
-    font-size: 38px;
+    font-size: 45px;
+    font-kerning: none;
 }
 
 h2 {
     margin: 0 0 5px;
-    font-size: 25px;
+    font-size: 28px;
+    font-kerning: none;
 }
 
 select {
     display: block;
-    width: 90%;
+    width: 60%;
     font-size: 13px;
     border-radius: 4px;
     padding: 10px;
@@ -62,5 +65,4 @@ footer{
     text-align: center;
     font-size: 14px;
     color: rgba(0, 0, 0, 0.8);
-    
 }
